Update text translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,7 +20,7 @@
 "Others":"Others",
 "Policies":"Policies",
 "Monitor":"Monitor",
-"Submit for employee":"Submit for employee",
+"Support member":"Support member",
 "Waiting leave requests":"Waiting leave requests",
 "Other leave requests":"Other leave requests",
 "Search...":"Search...",
