--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -19,7 +19,7 @@
 "Others":"Khác",
 "Policies":"Chính sách",
 "Monitor":"Giám sát",
-"Submit for employee":"Tạo đơn cho nhân viên",
+"Support member":"Hỗ trợ nhân viên",
 "Waiting leave requests":"Yêu cầu nghỉ phép đang chờ",
 "Other leave requests":"Yêu cầu nghỉ phép khác",
 "Search...":"Tìm kiếm...",
