--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,118 +1,119 @@
 {
-"English"   : "English",
-"Vietnamese"   : "Vietnamese",
-"Submit" : "Submit",
-"Leave" : "Leave",
-"Dashboard": "Dashboard",
-"Management":"Management",
-"History":"History",
-"Meeting":"Meeting",
-"Booking":"Booking",
-"Asset":"Asset",
-"Request":"Request",
-"Analytics":"Analytics",
-"Project":"Project",
-"My Projects":"My Projects",
-"My Works":"My Works",
-"Utilities":"Utilities",
-"Chainhaus Bar":"Chainhaus Bar",
-"Charity":"Charity",
-"Others":"Others",
-"Policies":"Policies",
-"Monitor":"Monitor",
-"Support member":"Support member",
-"Waiting leave requests":"Waiting leave requests",
-"Other leave requests":"Other leave requests",
-"Search...":"Search...",
-"Start Date":"Start Date",
-"End Date":"End Date",
-"Status":"Status",
-"Leave Type":"Leave Type",
-"Title":"Title",
-"Date Submitted":"Date Submitted",
-"From":"From",
-"To":"To",
-"Reason":"Reason",
-"Reject":"Reject",
-"Confirm":"Confirm",
-"Rejected":"Rejected",
-"Confirmed":"Confirmed",
-"Approved":"Approved",
-"All":"All",
-"Annual":"Annual",
-"Casual":"Casual",
-"Maternity":"Maternity",
-"Remote":"Remote",
-"Waiting":"Waiting",
-"Canceled":"Canceled",
-"No results matched your search":"No results matched your search",
-"No data available":"No data available",
-"Leave Detail":"Leave Detail",
-"Creator":"Creator",
-"Person on leave":"Person on leave",
-"Submitted date":"Submitted date",
-"Duration":"Duration",
-"Rejected by":"Rejected by",
-"Rejection reason":"Rejection reason",
-"Approved by":"Approved by",
-"Confirmed by":"Confirmed by",
-"Leave Date":"Leave Date",
-"Type":"Type",
-"Note":"Note",
-"All day":"All day",
-"Morning":"Morning",
-"Afternoon":"Afternoon",
-"Search employee, asset, skill,…":"Search employee, asset, skill,…",
-"Welcome":"Welcome",
-"Account Settings":"Account Settings",
-"My Profile":"My Profile",
-"Logout":"Logout",
-"Leave Request":"Leave Request",
-"Submit a leave":"Submit a leave",
-"Manager confirms the leave":"Manager confirms the leave",
-"Admin approves the leave":"Admin approves the leave",
-"Assign To":"Assign To",
-"day of Annual Leave":"day of Annual Leave",
-"Your leave type is Maternity.":"Your leave type is Maternity.",
-"You don't need to select Leave Detail.":"You don't need to select Leave Detail.",
-"Empty Detail":"Empty Detail",
-"Cancel":"Cancel",
-"Add":"Add",
-"Reset":"Reset",
-"You have used up your leave for this year. Would you like to submit this leave?":"You have used up your leave for this year. Would you like to submit this leave?",
-"Are you sure to submit this leave?":"Are you sure to submit this leave?",
-"Please enter Title":"Please enter Title",
-"Please enter between 10 and 50 characters":"Please enter between 10 and 50 characters",
-"Title cannot contain special characters":"Title cannot contain special characters",
-"Please select Leave Type":"Please select Leave Type",
-"Please choose valid time":"Please choose valid time",
-"Please select Start Date":"Please select Start Date",
-"Please select End Date":"Please select End Date",
-"Please enter between 10 and 255 characters":"Please enter between 10 and 255 characters",
-"Please enter Reason":"Please enter Reason",
-"Please enter Assign To":"Please enter Assign To",
-"Submit leave successfully":"Submit leave successfully",
-"Submit Leave fail":"Submit Leave fail",
-"Leave History":"Leave History",
-"Title, reason":"Title, reason",
-"Clear":"Clear",
-"Submitted Date":"Submitted Date",
-"Actions":"Actions",
-"There is no detail for Maternity type":"There is no detail for Maternity type",
-"Close":"Close",
-"Cancel Leave":"Cancel Leave",
-"Are you sure to cancel this leave?":"Are you sure to cancel this leave?",
-"Agree":"Agree",
-"Cancel leave successfully":"Cancel leave successfully",
-"You cannot cancel this leave because the manager has approved/ rejected it":"You cannot cancel this leave because the manager has approved/ rejected it",
-"An error occurred, please try again":"An error occurred, please try again",
-"Reject leave successfully":"Reject leave successfully",
-"You can not take this action because the creator canceled this leave":"You can not take this action because the creator canceled this leave",
-"Confirm leave successfully":"Confirm leave successfully",
-"Are you sure to":"Are you sure to",
-"this leave?":"this leave?",
-"reject":"reject",
-"confirm":"confirm",
-"cancel":"cancel",
-"Rejection reason (Optional)":"Rejection reason (Optional)"
+    "English": "English",
+    "Vietnamese": "Vietnamese",
+    "Submit": "Submit",
+    "Leave": "Leave",
+    "Dashboard": "Dashboard",
+    "Management": "Management",
+    "History": "History",
+    "Meeting": "Meeting",
+    "Booking": "Booking",
+    "Asset": "Asset",
+    "Request": "Request",
+    "Analytics": "Analytics",
+    "Project": "Project",
+    "My Projects": "My Projects",
+    "My Works": "My Works",
+    "Utilities": "Utilities",
+    "Chainhaus Bar": "Chainhaus Bar",
+    "Charity": "Charity",
+    "Others": "Others",
+    "Policies": "Policies",
+    "Monitor": "Monitor",
+    "Support member": "Support member",
+    "Waiting leave requests": "Waiting leave requests",
+    "Other leave requests": "Other leave requests",
+    "Search...": "Search...",
+    "Start Date": "Start Date",
+    "End Date": "End Date",
+    "Status": "Status",
+    "Leave Type": "Leave Type",
+    "Title": "Title",
+    "Date Submitted": "Date Submitted",
+    "From": "From",
+    "To": "To",
+    "Reason": "Reason",
+    "Reject": "Reject",
+    "Confirm": "Confirm",
+    "Rejected": "Rejected",
+    "Confirmed": "Confirmed",
+    "Approved": "Approved",
+    "All": "All",
+    "Annual": "Annual",
+    "Casual": "Casual",
+    "Maternity": "Maternity",
+    "Remote": "Remote",
+    "Waiting": "Waiting",
+    "Canceled": "Canceled",
+    "No results matched your search": "No results matched your search",
+    "No data available": "No data available",
+    "Leave Detail": "Leave Detail",
+    "Creator": "Creator",
+    "Person on leave": "Person on leave",
+    "Submitted date": "Submitted date",
+    "Duration": "Duration",
+    "Rejected by": "Rejected by",
+    "Rejection reason": "Rejection reason",
+    "Approved by": "Approved by",
+    "Confirmed by": "Confirmed by",
+    "Leave Date": "Leave Date",
+    "Type": "Type",
+    "Note": "Note",
+    "All day": "All day",
+    "Morning": "Morning",
+    "Afternoon": "Afternoon",
+    "Search employee, asset, skill,…": "Search employee, asset, skill,…",
+    "Welcome": "Welcome",
+    "Account Settings": "Account Settings",
+    "My Profile": "My Profile",
+    "Logout": "Logout",
+    "Leave Request": "Leave Request",
+    "Submit a leave": "Submit a leave",
+    "Manager confirms the leave": "Manager confirms the leave",
+    "Admin approves the leave": "Admin approves the leave",
+    "Assign To": "Assign To",
+    "day of Annual Leave": "day of Annual Leave",
+    "Your leave type is Maternity.": "Your leave type is Maternity.",
+    "You don't need to select Leave Detail.": "You don't need to select Leave Detail.",
+    "Empty Detail": "Empty Detail",
+    "Cancel": "Cancel",
+    "Add": "Add",
+    "Reset": "Reset",
+    "You have used up your leave for this year. Would you like to submit this leave?": "You have used up your leave for this year. Would you like to submit this leave?",
+    "Are you sure to submit this leave?": "Are you sure to submit this leave?",
+    "Please enter Title": "Please enter Title",
+    "Please enter between 10 and 50 characters": "Please enter between 10 and 50 characters",
+    "Title cannot contain special characters": "Title cannot contain special characters",
+    "Please select Leave Type": "Please select Leave Type",
+    "Please choose valid time": "Please choose valid time",
+    "Please select Start Date": "Please select Start Date",
+    "Please select End Date": "Please select End Date",
+    "Please enter between 10 and 255 characters": "Please enter between 10 and 255 characters",
+    "Please enter Reason": "Please enter Reason",
+    "Please enter Assign To": "Please enter Assign To",
+    "Submit leave successfully": "Submit leave successfully",
+    "Submit Leave fail": "Submit Leave fail",
+    "Leave History": "Leave History",
+    "Title, reason": "Title, reason",
+    "Clear": "Clear",
+    "Submitted Date": "Submitted Date",
+    "Actions": "Actions",
+    "There is no detail for Maternity type": "There is no detail for Maternity type",
+    "Close": "Close",
+    "Cancel Leave": "Cancel Leave",
+    "Are you sure to cancel this leave?": "Are you sure to cancel this leave?",
+    "Agree": "Agree",
+    "Cancel leave successfully": "Cancel leave successfully",
+    "You cannot cancel this leave because the manager has approved/ rejected it": "You cannot cancel this leave because the manager has approved/ rejected it",
+    "An error occurred, please try again": "An error occurred, please try again",
+    "Reject leave successfully": "Reject leave successfully",
+    "You can not take this action because the creator canceled this leave": "You can not take this action because the creator canceled this leave",
+    "Confirm leave successfully": "Confirm leave successfully",
+    "Are you sure to": "Are you sure to",
+    "this leave?": "this leave?",
+    "reject": "reject",
+    "confirm": "confirm",
+    "cancel": "cancel",
+    "Rejection reason (Optional)": "Rejection reason (Optional)",
+    "Please follow the format dd/mm/yyyy": "Please follow the format dd/mm/yyyy"
 }
