--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -119,5 +119,20 @@
     "A leave cannot exceed 5 working days.": "Thời gian nghỉ không được quá 5 ngày làm việc.",
     "No Options": "Không có kết quả",
     "Please enter between 0 and 255 characters": "Vui lòng nhập từ 0 đến 255 ký tự",
-    "Please follow the format dd/mm/yyyy": "Vui lòng nhập theo định dạng “dd/mm/yyyy"
+    "Please follow the format dd/mm/yyyy": "Vui lòng nhập theo định dạng “dd/mm/yyyy",
+    "Setting": "Cài đặt",
+    "Alert!": "Lưu ý!",
+    "Please enter password between 8 and 60 characters.": "Vui lòng nhập mật khẩu từ 8 đến 60 ký tự.",
+    "Do not share your password": "Không chia sẻ mật khẩu của bạn",
+    "Change Password": "Đổi Mật Khẩu",
+    "Current Password": "Mật Khẩu Hiện Tại",
+    "New Password": "Mật Khẩu Mới",
+    "Confirm Password": "Xác Nhận Mật Khẩu",
+    "Please enter Current Password": "Vui lòng nhập mật khẩu hiện tại",
+    "Please enter New Password": "Vui lòng nhập mật khẩu mới",
+    "Please enter Confirm Password": "Vui lòng nhập xác nhận mật khẩu",
+    "Please enter at least 8 characters": "Vui lòng nhập ít nhất 8 ký tự",
+    "Please enter no more than 60 characters": "Vui lòng nhập tối đa 60 ký tự",
+    "New password is the same with current password": "Mật khẩu mới trùng với mật khẩu hiện tại",
+    "Passwords must match": "Mật khẩu xác minh cần khớp với mật khẩu mới"
 }
