--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -115,5 +115,24 @@
     "confirm": "confirm",
     "cancel": "cancel",
     "Rejection reason (Optional)": "Rejection reason (Optional)",
-    "Please follow the format dd/mm/yyyy": "Please follow the format dd/mm/yyyy"
+    "Non-working day": "Non-working day",
+    "A leave cannot exceed 5 working days.": "A leave cannot exceed 5 working days.",
+    "No Options": "No Options",
+    "Please enter between 0 and 255 characters": "Please enter between 0 and 255 characters",
+    "Please follow the format dd/mm/yyyy": "Please follow the format dd/mm/yyyy",
+    "Setting": "Setting",
+    "Alert!": "Alert!",
+    "Please enter password between 8 and 60 characters.": "Please enter password between 8 and 60 characters.",
+    "Do not share your password": "Do not share your password",
+    "Change Password": "Change Password",
+    "Current Password": "Current Password",
+    "New Password": "New Password",
+    "Confirm Password": "Confirm Password",
+    "Please enter Current Password": "Please enter Current Password",
+    "Please enter New Password": "Please enter New Password",
+    "Please enter Confirm Password": "Please enter Confirm Password",
+    "Please enter at least 8 characters": "Please enter at least 8 characters",
+    "Please enter no more than 60 characters": "Please enter no more than 60 characters",
+    "New password is the same with current password": "New password is the same with current password",
+    "Passwords must match": "Passwords must match"
 }
