--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -134,5 +134,6 @@
     "Please enter at least 8 characters": "Please enter at least 8 characters",
     "Please enter no more than 60 characters": "Please enter no more than 60 characters",
     "New password is the same with current password": "New password is the same with current password",
-    "Passwords must match": "Passwords must match"
+    "Passwords must match": "Passwords must match",
+    "The leave date has duplicated with that in the previously existing leave.": "The leave date has duplicated with that in the previously existing leave."
 }
