--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -134,5 +134,6 @@
     "Please enter at least 8 characters": "Vui lòng nhập ít nhất 8 ký tự",
     "Please enter no more than 60 characters": "Vui lòng nhập tối đa 60 ký tự",
     "New password is the same with current password": "Mật khẩu mới trùng với mật khẩu hiện tại",
-    "Passwords must match": "Mật khẩu xác minh cần khớp với mật khẩu mới"
+    "Passwords must match": "Mật khẩu xác minh cần khớp với mật khẩu mới",
+    "The leave date has duplicated with that in the previously existing leave.": "Ngày nghỉ trùng với ngày nghỉ phép hiện có."
 }
