--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -119,7 +119,7 @@
     "A leave cannot exceed 5 working days.": "Thời gian nghỉ không được quá 5 ngày làm việc.",
     "No Options": "Không có kết quả",
     "Please enter between 0 and 255 characters": "Vui lòng nhập từ 0 đến 255 ký tự",
-    "Please follow the format dd/mm/yyyy": "Vui lòng nhập theo định dạng “dd/mm/yyyy",
+    "Please follow the format dd/mm/yyyy": "Vui lòng nhập theo định dạng dd/mm/yyyy",
     "Setting": "Cài đặt",
     "Alert!": "Lưu ý!",
     "Please enter password between 8 and 60 characters.": "Vui lòng nhập mật khẩu từ 8 đến 60 ký tự.",
