--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,7 +15,7 @@
     "My Projects": "My Projects",
     "My Works": "My Works",
     "Utilities": "Utilities",
-    "Chainhaus Bar": "Chainhaus Bar",
+    "Stdio Bar": "Stdio Bar",
     "Charity": "Charity",
     "Others": "Others",
     "Policies": "Policies",
@@ -150,5 +150,23 @@
     "Please no more than 50 characters": "Please no more than 50 characters",
     "The username or password you entered did not match our records. Please try again": "The username or password you entered did not match our records. Please try again",
     "Change Password successfully": "Change Password successfully",
-    "Incorrect password": "Incorrect password"
+    "Incorrect password": "Incorrect password",
+    "Employee ID": "Employee ID",
+    "Male": "Male",
+    "Female": "Female",
+    "Unknown": "Unknown",
+    "Department": "Department",
+    "Team": "Team",
+    "Personal Information": "Personal Information",
+    "Date of Birth": "Date of Birth",
+    "Gender": "Gender",
+    "Phone Number": "Phone Number",
+    "Email": "Email",
+    "Address": "Address",
+    "Professional Information": "Professional Information",
+    "Position": "Position",
+    "Nation": "Nation",
+    "CV URL": "CV URL",
+    "Branch": "Branch",
+    "Joining Date": "Joining Date"
 }
