--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -15,7 +15,7 @@
     "My Projects": "Dự án của tôi",
     "My Works": "Công việc của tôi",
     "Utilities": "Tiện ích",
-    "Chainhaus Bar": "Quầy nước Chainhaus",
+    "Stdio Bar": "Quầy nước Stdio",
     "Charity": "Từ thiện",
     "Others": "Khác",
     "Policies": "Chính sách",
@@ -150,5 +150,23 @@
     "Please no more than 50 characters": "Vui lòng nhập tối đa 50 ký tự",
     "The username or password you entered did not match our records. Please try again": "Tên người dùng hoặc mật khẩu bạn đã nhập không khớp với hồ sơ của chúng tôi. Vui lòng thử lại",
     "Change Password successfully": "Đổi mật khẩu thành công",
-    "Incorrect password": "Mật khẩu hiện tại không đúng"
+    "Incorrect password": "Mật khẩu hiện tại không đúng",
+    "Employee ID": "ID Nhân Viên",
+    "Male": "Nam",
+    "Female": "Nữ",
+    "Unknown": "Chưa rõ",
+    "Department": "Ban",
+    "Team": "Nhóm",
+    "Personal Information": "Thông Tin Cá Nhân",
+    "Date of Birth": "Ngày sinh",
+    "Gender": "Giới tính",
+    "Phone Number": "Điện thoại",
+    "Email": "Email",
+    "Address": "Địa chỉ",
+    "Professional Information": "Thông Tin Nghề Nghiệp",
+    "Position": "Vị trí",
+    "Nation": "Quốc gia",
+    "CV URL": "Sơ yếu lý lịch",
+    "Branch": "Chi nhánh",
+    "Joining Date": "Ngày tham gia"
 }
